--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <img src="img/the boys.jpg" alt="">
                         <div class="cont">
                             <h3>The Boys</h3>
-                            <p>Action , 2021 , <span>IMDB</span><i class="fa-solid fa-star"></i> 9.6</p>
+                            <p>Action , 2021 , <span>IMDB</span><i class="bi bi-star-fill"></i> 9.6</p>
                         </div>
                     </a>
                 </div>
@@ -51,9 +51,33 @@
                 <h6>A Netflix Original Film</h6>
                 <h5 id="gen">Thriller</h5>
                 <h4>2021</h4>
-                <h3 id="rate"><span>IMDB</span><i class="fa-solid fa-star"></i> 9.6</h3>
+                <h3 id="rate"><span>IMDB</span> <i class="bi bi-star-fill"></i> 9.6</h3>
+            </div>
+            <div class="btns">
+                <a href="#" id="play">Watch <i class="bi bi-play-fill"></i></a>
+                <a href="#" id="download_main"> <i class="bi bi-cloud-arrow-down-fill"></i></a>
             </div>
         </div>
+        <section>
+            <h4>Popular</h4>
+            <i class="bi bi-chevron-left"></i>
+            <i class="bi bi-chevron-right"></i>
+            <div class="cards">
+                <a href="#" class="card">
+                    <img src="img/the boys.jpg" alt="boy" class="poster">
+                    <div class="rest_card">
+                        <img src="img/the boys1.jpg" alt="">
+                        <div class="cont">
+                            <h4>The Boys</h4>
+                            <div class="sub">
+                                <p>Action, 2022</p>
+                                <h3><span>IMDB</span> <i class="bi bi-star-fill"></i> 9.6</h3>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </section>
     </header>
     <script src="app.js"></script>
 </body>
