New code Javascript

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
                 </ul>
             </div>
             <div class="search_user">
-                <input type="text" placeholder="Search..." id="search_id">
+                <input type="text" placeholder="Search..." id="search_id" required>
                 <img src="img/user.jpg" alt="user">
                 <div class="search">
-                    <a href="#" class="card">
+                    <!-- <a href="#" class="card">
                         <img src="img/the boys.jpg" alt="">
                         <div class="cont">
                             <h3>The Boys</h3>
                             <p>Action , 2021 , <span>IMDB</span><i class="bi bi-star-fill"></i> 9.6</p>
                         </div>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </nav>
@@ -50,7 +50,7 @@
             <div class="details">
                 <h6>A Netflix Original Film</h6>
                 <h5 id="gen">Thriller</h5>
-                <h4>2021</h4>
+                <h4 id="date">2021</h4>
                 <h3 id="rate"><span>IMDB</span> <i class="bi bi-star-fill"></i> 9.6</h3>
             </div>
             <div class="btns">
@@ -61,9 +61,10 @@
         <section>
             <h4>Popular</h4>
             <i class="bi bi-chevron-left"></i>
+
             <i class="bi bi-chevron-right"></i>
             <div class="cards">
-                <a href="#" class="card">
+                <!-- <a href="#" class="card">
                     <img src="img/the boys.jpg" alt="boy" class="poster">
                     <div class="rest_card">
                         <img src="img/the boys1.jpg" alt="">
@@ -75,7 +76,7 @@
                             </div>
                         </div>
                     </div>
-                </a>
+                </a> -->
             </div>
         </section>
     </header>
