--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                 <img src="img/logo.png" alt="logo" >
                 <ul>
                     <li>
-                        <a href="#">Home</a>
+                        <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="#">Series</a>
+                        <a href="#series" class="series">Series</a>
                     </li>
                     <li>
-                        <a href="#">Movies</a>
+                        <a href="#" class="movies">Movies</a>
                     </li>
                     <li>
                         <a href="#">Kids</a>
@@ -54,7 +54,7 @@
                 <h3 id="rate"><span>IMDB</span> <i class="bi bi-star-fill"></i> 9.6</h3>
             </div>
             <div class="btns">
-                <a href="#" id="play">Watch <i class="bi bi-play-fill"></i></a>
+                <a href="#" class="play">Watch <i class="bi bi-play-fill"></i></a>
                 <a href="#" id="download_main"> <i class="bi bi-cloud-arrow-down-fill"></i></a>
             </div>
         </div>
